--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@graphql-tools/schema": "^8.5.0",
     "@graphql-yoga/node": "^2.12.0",
-    "graphql": "^16.5.0"
+    "graphql": "^16.1.0-experimental-stream-defer.6"
   },
   "description": ""
 }
